--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.0.0-rc.1",
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "web-vitals": "^2.1.4"
