--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.0",
     "font-awesome": "^4.7.0",
+    "mdb-react-ui-kit": "^2.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-phone-number-input": "^3.1.46",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "web-vitals": "^2.1.4"
